# copilot-memory-compiler

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.sh
.github/: copilot-instructions.md
daily/: 2026-04-15.md  2026-04-16.md
knowledge/: index.md  log.md
knowledge/concepts/: cicd-pipeline-design.md  database-migration-strategy.md  fastapi-jwt-authentication.md
knowledge/connections/: auth-and-cicd.md
scripts/: compile.py  config.py  harvest.py  lint.py  llm.py  query.py
